# sentry-cpp

./: CMakeLists.txt  LICENSE  README.md
include/: SentryClient.h  SentryMessage.h  sentry.hpp  sentry_client.hpp  sentry_client_impl.hpp  sentry_message.hpp  types.h
src/: CMakeLists.txt  SentryClient.cpp  SentryClient.h  SentryMessage.h  sentry.cpp  sentry.h
test/: CMakeLists.txt  test.cpp
